tests/type-errors/shadow_field_errors.arl
archetype shadow_field_errors

asset myasset {
  id: string;
} shadow {
  s: int; (* must be initialized *)
} with {
  a1: s >= 0;
}

entry main (k : pkey of myasset) {
  effect {
    myasset.add({id = k; s = 1}); (* cannot assign shadow field in execution instruction *)
    myasset.update(k, {s = 2}); (* cannot update shadow field in execution instruction *)
    require(m.s = 2) (* cannot read shadow field here *)
  }
}
